# lifeguard-iot

./: .gitignore  Gemfile  README.md  _config.yml
_includes/: mathjax.html
_layouts/: default.html  post.html
_pages/: index.md
_posts/2026-05-29-lifeguard/: 2026-05-29-lifeguard.md
_sass/: architects-daughter-font.scss  theme.scss
assets/css/: post.scss
first-delivery/: overview.drawio
source/components/lmic/: CMakeLists.txt  Kconfig  lmic_project_config.h
source/components/lmic/include/lmic/: config.h  hal.h  lmic.h  lmic_compat.h  lmic_config_preconditions.h  lmic_env.h  oslmic.h
source/components/lmic/include/lmic_aes/: lmic_aes_api.h  lmic_aes_interface.h
source/components/lmic/include/lmic_hal/: boards.hh  configuration.hh  hal.hh
source/components/lmic/include/lmic_se/: lmic_secure_element_api.h  lmic_secure_element_interface.h
source/components/lmic/include/lmic_se/drivers/default/: lmic_se_default.h
source/components/lmic/src/aes/: lmic.c  other.c
source/components/lmic/src/aes/ideetron/: AES-128_V10.cpp
source/components/lmic/src/hal/: get_board_config_heltec_lora32_v2.cpp  get_board_config_heltec_lora32_v3.cpp  hal.cpp
source/components/lmic/src/lmic/: lmic.c  lmic_as923.c  lmic_au915.c  lmic_channelshuffle.c  lmic_compliance.c  lmic_eu868.c  lmic_eu_like.c  lmic_in866.c  lmic_kr920.c  lmic_us915.c  lmic_us_like.c  lmic_util.c  oslmic.c  radio_sx126x.c  radio_sx127x.c
source/components/lmic/src/se/drivers/default/: lmic_se_default.c
source/hub/: CMakeLists.txt
source/power_measurement/: Makefile  avr.mk
(+66 files in other folders)
